# lwepaper

./: .gitignore  BUILD_LWE.md  CMakeLists.txt  README.md  patch_all.py
patches/: 0001-puppet-single-pass-composite.patch  0002-colorbuilder-whole-number-float-colors.patch  0003-text-layer-getlayer-and-parent-transform.patch
src/: lwelibrary.cpp  lwelibrary.h  lwescenepatch.cpp  lwescenepatch.h  lweview.cpp  lweview.h  plugin.cpp
wallpaper/: metadata.json
wallpaper/contents/config/: main.xml
wallpaper/contents/ui/: config.qml  main.qml
